# rabbitmq-c-kos

./: .gitignore  .gitmodules  AUTHORS  CONTRIBUTING.md  ChangeLog.md  LICENSE  README.md  THIRD-PARTY-NOTICES.txt
.github/: CODEOWNERS
examples/: utils.c
kos/amqp_consumer/: CMakeLists.txt  README.md  cross-build.sh
kos/amqp_consumer/consumer/: CMakeLists.txt
kos/amqp_consumer/consumer/src/: consumer.cpp  consumer.h  general.h  main.cpp
kos/amqp_consumer/einit/: CMakeLists.txt
kos/amqp_consumer/einit/src/: init.yaml.in  security.psl  security.psl.in
kos/amqp_publisher/: CMakeLists.txt  README.md  cross-build-test.sh  cross-build.sh
kos/amqp_publisher/einit/: CMakeLists.txt
kos/amqp_publisher/einit/src/: external.psl  init.yaml.in  init.yaml.tests.in  internal.psl  security.psl  security.psl.in  security.tests.psl
kos/amqp_publisher/publisher/: CMakeLists.txt
kos/amqp_publisher/publisher/src/: general.h  main.cpp  publisher.cpp  publisher.h
kos/amqp_publisher/tests/: CMakeLists.txt  README  general.h  main.cpp
kos/resources/edl/: Consumer.edl  Publisher.edl  TestEntity.edl
kos/resources/rootfs/etc/: dhcpcd.conf  hosts  ntp.conf
kos/unit_tests/: CMakeLists.txt  README.md  cross-build.sh
kos/unit_tests/einit/: CMakeLists.txt
kos/unit_tests/einit/src/: init.yaml.in  security.psl.in
kos/unit_tests/tests/: CMakeLists.txt
kos/unit_tests/tests/src/: main.cpp
kos/utils/: utils.cpp  utils.hpp
librabbitmq/: amqp_socket.c  amqp_socket.h
tools/: common.c
